--- a/pages/17865.html
+++ b/pages/17865.html
@@ -10,8 +10,8 @@
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1532864950" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1532905252" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1532905250" type="text/javascript"></script>
+<script src="/javascripts/application.js?1532905250" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1533109147" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1533108238" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -291,8 +291,9 @@ margin-left: 0em;
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8453/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8453/#Item_8" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -306,7 +307,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <blockquote>
+      <blockquote>
 <p>This entry is about the concept in <a class='existingWikiWord' href='/nlab/show/geometry'>geometry</a>/<a class='existingWikiWord' href='/nlab/show/physics'>physics</a>/<a class='existingWikiWord' href='/nlab/show/linear+algebra'>linear algebra</a>. For the concept in <a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a> see <em><a class='existingWikiWord' href='/nlab/show/reflective+subcategory'>reflective subcategory</a></em></p>
 </blockquote>
 <hr/>
@@ -314,29 +315,26 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a><ul><li><a href='#related_concepts'>Related concepts</a></li></ul></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>Given a <span class='newWikiWord'>hyperplane<a href='/nlab/new/hyperplane'>?</a></span> in a <a class='existingWikiWord' href='/nlab/show/Euclidean+space'>Euclidean space</a>, then <em>reflection</em> at that hyperplane is the operation that sends each point to its mirror image at that hyperplane, the result of translating the point in the <a class='existingWikiWord' href='/nlab/show/direction+of+a+vector'>direction</a> <span class='newWikiWord'>perpendicular<a href='/nlab/new/perpendicular'>?</a></span> to the hyperplane by twice its <a class='existingWikiWord' href='/nlab/show/metric+space'>distance</a> to the hyperplane.</p>
+<p>Given a <span class='newWikiWord'>hyperplane<a href='/nlab/new/hyperplane'>?</a></span> in a <a class='existingWikiWord' href='/nlab/show/Euclidean+space'>Euclidean space</a>, then <em>reflection</em> at that hyperplane is the operation that sends each point to its mirror image at that hyperplane, the result of translating the point in the <a class='existingWikiWord' href='/nlab/show/direction+of+a+vector'>direction</a> <span class='newWikiWord'>perpendicular<a href='/nlab/new/perpendicular'>?</a></span> to the hyperplane by twice its <a class='existingWikiWord' href='/nlab/show/distance'>distance</a> to the hyperplane.</p>
 
 <h3 id='related_concepts'>Related concepts</h3>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/rotation'>rotation</a>, <a class='existingWikiWord' href='/nlab/show/translation+group'>translation</a>, <a class='existingWikiWord' href='/nlab/show/boost'>boost</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/rotation'>rotation</a>, <a class='existingWikiWord' href='/nlab/show/translation'>translation</a>, <a class='existingWikiWord' href='/nlab/show/boost'>boost</a></li>
 </ul>
-
-<p>
-</p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on April 17, 2018 at 11:57:13.
+  Last revised on August  1, 2018 at 08:18:06.
   See the <a href="https://ncatlab.org/nlab/history/reflection" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/reflection" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/reflection/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/reflection" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/reflection" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-
+  <a href="/nlab/edit/reflection" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/reflection/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/reflection" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/reflection" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/reflection/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
     <a href="/nlab/print/reflection" accesskey="p" id="view_print" rel="nofollow">Print</a>
