--- a/pages/5544.html
+++ b/pages/5544.html
@@ -10,8 +10,8 @@
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1532864950" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1532905252" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1532905250" type="text/javascript"></script>
+<script src="/javascripts/application.js?1532905250" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1533109147" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1533108238" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/2422/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,26 +307,18 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='rightHandSide'>
+      <div class='rightHandSide'>
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
 <h4 id='manifolds_and_cobordisms'>Manifolds and cobordisms</h4>
 
-<div class='hide'>
-<p><strong><a class='existingWikiWord' href='/nlab/show/manifold'>manifolds</a></strong> and <strong><a class='existingWikiWord' href='/nlab/show/cobordism'>cobordisms</a></strong></p>
-
-<p><a class='existingWikiWord' href='/nlab/show/cobordism+theory'>cobordism theory</a>, <em><a class='existingWikiWord' href='/nlab/show/Introduction+to+Cobordism+and+Complex+Oriented+Cohomology'>Introduction</a></em></p>
-
-<h2 id='definitions'>Definitions</h2>
+<div class='hide'><p><strong><a class='existingWikiWord' href='/nlab/show/manifolds'>manifolds</a></strong> and <strong><a class='existingWikiWord' href='/nlab/show/cobordisms'>cobordisms</a></strong></p><p><a class='existingWikiWord' href='/nlab/show/cobordism+theory'>cobordism theory</a>, <em><a class='existingWikiWord' href='/nlab/show/Introduction+to+Cobordism+and+Complex+Oriented+Cohomology'>Introduction</a></em></p><h2 id='definitions'>Definitions</h2><ul></ul><li>
+<p><a class='existingWikiWord' href='/nlab/show/locally+Euclidean+space'>locally Euclidean space</a></p>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/topological+manifold'>locally Euclidean space</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/coordinate+system'>coordinate chart</a>, <a class='existingWikiWord' href='/nlab/show/gluing+function'>coordinate transformation</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/coordinate+chart'>coordinate chart</a>, <span class='newWikiWord'>coordinate transformation<a href='/nlab/new/coordinate+transformation'>?</a></span></p>
 </li>
 
 <li>
@@ -338,9 +329,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/smooth+structure'>smooth structure</a></p>
 </li>
 </ul>
-</li>
-
-<li>
+</li><li>
 <p><a class='existingWikiWord' href='/nlab/show/manifold'>manifold</a></p>
 
 <ul>
@@ -352,33 +341,23 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/differentiable+manifold'>differentiable manifold</a>, ,<a class='existingWikiWord' href='/nlab/show/smooth+manifold'>smooth manifold</a></p>
 </li>
 </ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/infinite-dimensional+manifold'>infinite dimensional manifold</a></p>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/infinite+dimensional+manifold'>infinite dimensional manifold</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Banach+manifold'>Banach manifold</a>, <a class='existingWikiWord' href='/nlab/show/Hilbert+manifold'>Hilbert manifold</a>, <a class='existingWikiWord' href='/nlab/show/ILH+manifold'>ILH manifold</a>, <a class='existingWikiWord' href='/nlab/show/Fr%C3%A9chet+manifold'>Frechet manifold</a>, <a class='existingWikiWord' href='/nlab/show/convenient+manifold'>convenient manifold</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/Banach+manifold'>Banach manifold</a>, <a class='existingWikiWord' href='/nlab/show/Hilbert+manifold'>Hilbert manifold</a>, <a class='existingWikiWord' href='/nlab/show/ILH+manifold'>ILH manifold</a>, <a class='existingWikiWord' href='/nlab/show/Frechet+manifold'>Frechet manifold</a>, <a class='existingWikiWord' href='/nlab/show/convenient+manifold'>convenient manifold</a></li>
 </ul>
-</li>
-
-<li>
+</li><li>
 <p><a class='existingWikiWord' href='/nlab/show/tangent+bundle'>tangent bundle</a></p>
-</li>
-
-<li>
+</li><li>
 <p><a class='existingWikiWord' href='/nlab/show/normal+bundle'>normal bundle</a></p>
-</li>
-
-<li>
+</li><li>
 <p><a class='existingWikiWord' href='/nlab/show/G-structure'>G-structure</a>, <a class='existingWikiWord' href='/nlab/show/torsion+of+a+G-structure'>torsion of a G-structure</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/orientation'>orientation</a>, <a class='existingWikiWord' href='/nlab/show/spin+structure'>spin structure</a>, <a class='existingWikiWord' href='/nlab/show/string+structure'>string structure</a>, <a class='existingWikiWord' href='/nlab/show/Fivebrane+structure'>fivebrane structure</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/orientation'>orientation</a>, <a class='existingWikiWord' href='/nlab/show/spin+structure'>spin structure</a>, <a class='existingWikiWord' href='/nlab/show/string+structure'>string structure</a>, <a class='existingWikiWord' href='/nlab/show/fivebrane+structure'>fivebrane structure</a></li>
 </ul>
-</li>
-
-<li>
+</li><li>
 <p><a class='existingWikiWord' href='/nlab/show/Cartan+geometry'>Cartan geometry</a>:</p>
 
 <ul>
@@ -394,9 +373,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/symplectic+manifold'>symplectic manifold</a></p>
 </li>
 </ul>
-</li>
-
-<li>
+</li><li>
 <p><a class='existingWikiWord' href='/nlab/show/cobordism'>cobordism</a></p>
 
 <ul>
@@ -413,7 +390,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/%28infinity%2Cn%29-category+of+cobordisms'>(∞,n)-category of cobordisms</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/%28%E2%88%9E%2Cn%29-category+of+cobordisms'>(∞,n)-category of cobordisms</a></p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/FQFT'>functorial quantum field theory</a></li>
@@ -425,7 +402,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/bordism+ring'>cobordism ring</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/cobordism+ring'>cobordism ring</a></p>
 </li>
 
 <li>
@@ -434,41 +411,19 @@ margin-left: 0em;
 </ul>
 </li>
 </ul>
-</li>
-</ul>
-
-<h2 id='genera_and_invariants'>Genera and invariants</h2>
-
-<ul>
-<li>
+</li><h2 id='genera_and_invariants'>Genera and invariants</h2><ul></ul><li>
 <p><a class='existingWikiWord' href='/nlab/show/signature+genus'>signature genus</a>, <a class='existingWikiWord' href='/nlab/show/Kervaire+invariant'>Kervaire invariant</a></p>
-</li>
-
-<li>
+</li><li>
 <p><a class='existingWikiWord' href='/nlab/show/A-hat+genus'>A-hat genus</a>, <a class='existingWikiWord' href='/nlab/show/Witten+genus'>Witten genus</a></p>
-</li>
-</ul>
-
-<h2 id='theorems'>Theorems</h2>
-
-<ul>
-<li>
+</li><h2 id='theorems'>Theorems</h2><ul></ul><li>
 <p><a class='existingWikiWord' href='/nlab/show/Whitney+embedding+theorem'>Whitney embedding theorem</a></p>
-</li>
-
-<li>
+</li><li>
 <p><a class='existingWikiWord' href='/nlab/show/Thom%27s+transversality+theorem'>Thom&#39;s transversality theorem</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Pontrjagin-Thom+collapse+map'>Pontrjagin-Thom construction</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/cobordism+category'>Galatius-Tillmann-Madsen-Weiss theorem</a></p>
-</li>
-
-<li>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/Pontrjagin-Thom+construction'>Pontrjagin-Thom construction</a></p>
+</li><li>
+<p><a class='existingWikiWord' href='/nlab/show/Galatius-Tillmann-Madsen-Weiss+theorem'>Galatius-Tillmann-Madsen-Weiss theorem</a></p>
+</li><li>
 <p><a class='existingWikiWord' href='/nlab/show/geometrization+conjecture'>geometrization conjecture</a>,</p>
 
 <ul>
@@ -480,17 +435,11 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/elliptization+conjecture'>elliptization conjecture</a></p>
 </li>
 </ul>
-</li>
-
-<li>
+</li><li>
 <p><a class='existingWikiWord' href='/nlab/show/cobordism+hypothesis'>cobordism hypothesis</a>-theorem</p>
-</li>
-</ul>
-<div>
-<p>
+</li><div></div><p>
   <a href='/nlab/edit/manifolds+and+cobordisms+-+contents'>Edit this sidebar</a>
-</p>
-</div></div>
+</p></div>
 </div>
 </div>
 
@@ -500,14 +449,14 @@ margin-left: 0em;
 <div style='float: right; margin: 0 10px 10px 0;'>
 <img src='https://ncatlab.org/nlab/files/ChartsOfAManifold.png' width='400'/> 
 </div>
-<p>A <a class='existingWikiWord' href='/nlab/show/topological+manifold'>topological manifold</a> <math class='maruku-mathml' display='inline' id='mathml_db545fecff5dd7325c7dda286ad08b48fe21d1bf_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> of <a class='existingWikiWord' href='/nlab/show/dimension'>dimension</a> <math class='maruku-mathml' display='inline' id='mathml_db545fecff5dd7325c7dda286ad08b48fe21d1bf_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>n \in \mathbb{N}</annotation></semantics></math> is by definition a <a class='existingWikiWord' href='/nlab/show/topological+space'>topological space</a> that is locally <a class='existingWikiWord' href='/nlab/show/homeomorphism'>homeomorphic</a> to a <a class='existingWikiWord' href='/nlab/show/cartesian+space'>Cartesian space</a> <math class='maruku-mathml' display='inline' id='mathml_db545fecff5dd7325c7dda286ad08b48fe21d1bf_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math>. A choice of such morphism</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_db545fecff5dd7325c7dda286ad08b48fe21d1bf_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϕ</mi><mo>:</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mover><mo>→</mo><mo>≃</mo></mover><mi>X</mi><msub><mo stretchy='false'>|</mo> <mrow><mi>im</mi><mo stretchy='false'>(</mo><mi>ϕ</mi><mo stretchy='false'>)</mo></mrow></msub><mo>↪</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>
+<p>A <a class='existingWikiWord' href='/nlab/show/topological+manifold'>topological manifold</a> <math class='maruku-mathml' display='inline' id='mathml_f49165a99f64a5680ce07c7e9f7b0b5e051e9196_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> of <a class='existingWikiWord' href='/nlab/show/dimension'>dimension</a> <math class='maruku-mathml' display='inline' id='mathml_f49165a99f64a5680ce07c7e9f7b0b5e051e9196_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>n \in \mathbb{N}</annotation></semantics></math> is by definition a <a class='existingWikiWord' href='/nlab/show/topological+space'>topological space</a> that is locally <a class='existingWikiWord' href='/nlab/show/homeomorphic'>homeomorphic</a> to a <a class='existingWikiWord' href='/nlab/show/Cartesian+space'>Cartesian space</a> <math class='maruku-mathml' display='inline' id='mathml_f49165a99f64a5680ce07c7e9f7b0b5e051e9196_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math>. A choice of such morphism</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_f49165a99f64a5680ce07c7e9f7b0b5e051e9196_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϕ</mi><mo>:</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mover><mo>→</mo><mo>≃</mo></mover><mi>X</mi><msub><mo stretchy='false'>|</mo> <mrow><mi>im</mi><mo stretchy='false'>(</mo><mi>ϕ</mi><mo stretchy='false'>)</mo></mrow></msub><mo>↪</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>
   \phi : \mathbb{R}^n \stackrel{\simeq}{\to} X|_{im(\phi)} \hookrightarrow X
 
 </annotation></semantics></math></div>
-<p>is a <strong>coordinate system</strong> or <strong>coordinate chart</strong> or just <strong>chart</strong> on the <a class='existingWikiWord' href='/nlab/show/image'>image</a> of <math class='maruku-mathml' display='inline' id='mathml_db545fecff5dd7325c7dda286ad08b48fe21d1bf_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϕ</mi></mrow><annotation encoding='application/x-tex'>\phi</annotation></semantics></math>.</p>
+<p>is a <strong>coordinate system</strong> or <strong>coordinate chart</strong> or just <strong>chart</strong> on the <a class='existingWikiWord' href='/nlab/show/image'>image</a> of <math class='maruku-mathml' display='inline' id='mathml_f49165a99f64a5680ce07c7e9f7b0b5e051e9196_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ϕ</mi></mrow><annotation encoding='application/x-tex'>\phi</annotation></semantics></math>.</p>
 
-<p>This generalises to other sorts of <a class='existingWikiWord' href='/nlab/show/manifold'>manifolds</a>.</p>
+<p>This generalises to other sorts of <a class='existingWikiWord' href='/nlab/show/manifolds'>manifolds</a>.</p>
 
 <p>An <a class='existingWikiWord' href='/nlab/show/atlas'>atlas</a> is the collection of coordinate charts defining a manifold structure.</p>
 
@@ -519,7 +468,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/gluing+function'>coordinate transformation</a>, <a class='existingWikiWord' href='/nlab/show/diffeomorphism'>diffeomorphism</a></p>
+<p><span class='newWikiWord'>coordinate transformation<a href='/nlab/new/coordinate+transformation'>?</a></span>, <a class='existingWikiWord' href='/nlab/show/diffeomorphism'>diffeomorphism</a></p>
 </li>
 
 <li>
@@ -530,58 +479,23 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/polar+coordinates'>polar coordinates</a></p>
 </li>
 </ul>
-
-<p>
- 
-</p>
-
-<p>
- 
-</p>
-
-<p>
- 
-</p>
-
-<p>
- 
-</p>
-
-<p>
- 
-</p>
-
-<p>
- 
-</p>
-
-<p>
- 
-</p>
-
-<p>
- 
-</p>
-
-<p>
- 
-</p>
 </div>
 
 <div class="revisedby">
-  Revised on November 30, 2017 07:38:37 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  <p>
+  Last revised on August  1, 2018 at 08:04:18.
+  See the <a href="https://ncatlab.org/nlab/history/coordinate system" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/coordinate+system" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/coordinate+system/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/coordinate+system" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/coordinate+system" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/coordinate+system" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/coordinate+system/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/coordinate+system" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/coordinate+system" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/coordinate system/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/coordinate+system" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/coordinate+system" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/coordinate+system" id="view_source" rel="nofollow">Source</a>
