--- a/pages/18941.html
+++ b/pages/18941.html
@@ -10,8 +10,8 @@
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1532864950" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1532905251" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1532905252" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1532905250" type="text/javascript"></script>
+<script src="/javascripts/application.js?1532905250" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1533109147" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1533108238" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8244/#Item_7" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,13 +307,13 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='contents'>Contents</h1>
+      <h1 id='contents'>Contents</h1>
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>A 2-<a class='existingWikiWord' href='/nlab/show/cell+complex'>cell</a> in a <a class='existingWikiWord' href='/nlab/show/cell+complex'>cell complex</a> or <a class='existingWikiWord' href='/nlab/show/simplicial+complex'>simplicial complex</a> etc., such as a <a class='existingWikiWord' href='/nlab/show/polyhedron'>polyhedron</a>, is often called a <em>face</em> (also <em>facet</em> or <em>plaquette</em>, for instance in <a class='existingWikiWord' href='/nlab/show/lattice+gauge+theory'>lattice gauge theory</a>).</p>
+<p>A 2-<a class='existingWikiWord' href='/nlab/show/cell'>cell</a> in a <a class='existingWikiWord' href='/nlab/show/cell+complex'>cell complex</a> or <a class='existingWikiWord' href='/nlab/show/simplicial+complex'>simplicial complex</a> etc., such as a <a class='existingWikiWord' href='/nlab/show/polyhedron'>polyhedron</a>, is often called a <em>face</em> (also <em>facet</em> or <em>plaquette</em>, for instance in <a class='existingWikiWord' href='/nlab/show/lattice+gauge+theory'>lattice gauge theory</a>).</p>
 
-<p>More generally one calls cells in the <a class='existingWikiWord' href='/nlab/show/boundary'>boundary</a> of a <a class='existingWikiWord' href='/nlab/show/cell+complex'>cell complex</a> faces, even if they are higher dimensional (for instance in the definition of <a class='existingWikiWord' href='/nlab/show/simplex'>simplices</a> and <a class='existingWikiWord' href='/nlab/show/simplicial+set'>simplicial sets</a>).</p>
+<p>More generally one calls cells in the <a class='existingWikiWord' href='/nlab/show/boundary'>boundary</a> of a <a class='existingWikiWord' href='/nlab/show/cell+complex'>cell complex</a> faces, even if they are higher dimensional (for instance in the definition of <a class='existingWikiWord' href='/nlab/show/simplices'>simplices</a> and <a class='existingWikiWord' href='/nlab/show/simplicial+sets'>simplicial sets</a>).</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -324,7 +323,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Euler+formula+for+planar+graphs'>Euler characteristic of planar graphs</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Euler+characteristic+of+planar+graphs'>Euler characteristic of planar graphs</a></p>
 </li>
 </ul>
 
@@ -335,33 +334,23 @@ margin-left: 0em;
 <ul>
 <li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Face_(geometry)'>Face (geometry)</a></em></li>
 </ul>
-
-<p>
-</p>
-
-<p>
- 
-</p>
-
-<p>
- 
-</p>
 </div>
 
 <div class="revisedby">
-  Revised on January 16, 2018 16:50:51 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (178.9.124.30)
+  <p>
+  Last revised on August  1, 2018 at 13:39:12.
+  See the <a href="https://ncatlab.org/nlab/history/face" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/face" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/face/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/face" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/face" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/face" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/face/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/face" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/face" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/face/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/face" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/face" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/face" id="view_source" rel="nofollow">Source</a>
